cc_library(
    name = "can2040",
    srcs = ["third_party/can2040/src/can2040.c"],
    hdrs = ["third_party/can2040/src/can2040.h"],
    includes = ["third_party/can2040/src"],
    deps = [
        "@pico-sdk//src/rp2_common/cmsis:cmsis_core",
        "@pico-sdk//src/rp2_common/pico_stdlib:pico_stdlib",
    ],
)

cc_binary(
    name = "demo",
    srcs = ["main.c"],
    deps = [":can2040"],
)
